--- a/mobile/www/app/shared/status/blockUserMenu.html
+++ b/mobile/www/app/shared/status/blockUserMenu.html
@@ -1,7 +1,7 @@
 <ion-popover-view>
     <ion-content>
         <div class="list" ng-click="popover.hide()">
-            <a class="button button-clear ion-share tatami-button" ng-click="vm.shareStatus()" ng-class="{ 'button-royal': vm.status.shareByMe }">
+            <a class="item ion-share" ng-click="vm.shareStatus()" ng-class="{ 'button-royal': vm.status.shareByMe }">
                 Share Status
             </a>
             <a class="item" target="_blank" translate="status.block.reportStatus" ng-click="vm.reportStatus()">
@@ -14,7 +14,7 @@
                 Hide User from Timeline
             </a>
 
-            <a class="button button-clear ion-trash-a tatami-button"
+            <a class="item ion-trash-a assertive"
                ng-if="vm.currentUser = 'ADMIN'" ng-click="vm.remove()" translate="status.block.delete">
                 Delete
             </a>
