--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -33,6 +33,9 @@
         <script src="app/components/login/login.js"></script>
         <script src="app/components/login/login.controller.js"></script>
 
+        <script src="app/components/login/server/server.js"></script>
+        <script src="app/components/login/server/server.controller.js"></script>
+
         <script src="app/components/home/home.js"></script>
         <script src="app/components/home/timeline/timeline.js"></script>
         <script src="app/components/home/timeline/timeline.controller.js"></script>
