--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -9,7 +9,7 @@
         <link href="lib/ionic/release/css/ionic.min.css" rel="stylesheet">
         <link href="css/style.min.css" rel="stylesheet">
 
-    <!-- compiled css output -->
+        <!-- compiled css output -->
         <link href="css/ionic.app.css" rel="stylesheet">
 
         <!-- ionic/angularjs js -->
@@ -21,6 +21,7 @@
         <script src="lib/messageformat/messageformat.js"></script>
         <script src="lib/angular-translate-interpolation-messageformat/angular-translate-interpolation-messageformat.js"></script>
         <script src="lib/angular-translate-loader-partial/angular-translate-loader-partial.js"></script>
+        <script src="lib/ionic-toast/dist/ionic-toast.bundle.min.js"></script>
 
         <!-- cordova script (this will be a 404 during development) -->
         <script src="cordova.js"></script>
