Added a line to display that the status is an announcement (if it is..)

--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -9,6 +9,14 @@
             <span translate="status.share.title">share</span>
             <br>
         </p>
+        <p ng-if="status.type == 'ANNOUNCEMENT'">
+            <span class="ion-speakerphone">&nbsp;</span>
+            <a ng-click="vm.goToProfile(vm.status.sharedByUsername)">
+                <span class="text-muted">@{{ vm.status.sharedByUsername }}</span>
+            </a>
+            <span translate="status.announcement.title">share</span>
+            <br>
+        </p>
 
         <div class="profile-name">
             <a ng-click="vm.goToProfile(vm.status.username)">
