Created the feature to hide a single status from your timeline.

--- a/mobile/www/app/shared/status/blockUserMenu.html
+++ b/mobile/www/app/shared/status/blockUserMenu.html
@@ -4,6 +4,9 @@
             <a class="item ion-share" translate="status.share.action" ng-click="vm.shareStatus()" ng-class="{ 'button-royal': vm.status.shareByMe }">
                 Share Status
             </a>
+            <a class="item" target="_blank" translate="status.hide.action" ng-click="vm.hideStatus()">
+                Hide status
+            </a>
             <a class="item" target="_blank" translate="status.block.reportStatus" ng-click="vm.reportStatus()">
                 Report Post
             </a>
