--- a/mobile/www/app/tatami.html
+++ b/mobile/www/app/tatami.html
@@ -1,5 +1,5 @@
 <ion-header-bar align-title="center" class="bar-header bar-dark">
-    <div class="buttons" ng-if="!(vm.$state.includes('login') && !vm.$state.includes('follow')">
+    <div class="buttons" ng-if="!vm.$state.includes('login') && !vm.$state.includes('follow')">
         <a ui-sref="suggested">
             <button class="button button-clear ion-android-person-add"></button>
         </a>
