Popup and translation issues for blocking user.

--- a/mobile/www/app/shared/user/user.html
+++ b/mobile/www/app/shared/user/user.html
@@ -6,12 +6,12 @@
         <span class="inline subheading">@{{ vm.user.username }}</span>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
-        <ion-option-button ng-if="(!vm.currentUser || vm.currentUser.username === vm.status.username) && !vm.isManageBlockUsersState()"
+        <ion-option-button ng-if="(!vm.currentUser || vm.currentUser.username === vm.status.username) && !vm.$state.includes('blockedusers')"
                            class="button-positive"
                            ng-click="vm.followUser(user)">
             {{ (vm.user.friend ? 'user.unfollow' : 'user.follow') | translate }}
         </ion-option-button>
-        <ion-option-button ng-if="vm.isManageBlockUsersState()"
+        <ion-option-button ng-if="vm.$state.includes('blockedusers')"
                            class="button-positive"
                            ng-click="vm.updateBlockUser()">
             {{ (vm.user.blocked ? 'user.unblock.title' : 'user.block.title') | translate }}
