--- a/mobile/www/app/shared/status/blockUserMenu.html
+++ b/mobile/www/app/shared/status/blockUserMenu.html
@@ -10,9 +10,9 @@
             <a class="item" target="_blank" translate="status.block.reportStatus" ng-click="vm.reportStatus()">
                 Report Post
             </a>
-            <a class="item" target="_blank" translate="status.block.reportUser">
-                Report User
-            </a>
+            <!--<a class="item" target="_blank" translate="status.block.reportUser">-->
+                <!--Report User-->
+            <!--</a>-->
             <a class="item" target="_blank" translate="status.block.blockUser" ng-click="vm.blockUser()">
                 Hide User from Timeline
             </a>
