Added support for viewing currentUser.isAdmin on any view, now hide 'more' menu delete button unless user is admin (need to make menu dynamically sized)

--- a/mobile/www/app/shared/status/blockUserMenu.html
+++ b/mobile/www/app/shared/status/blockUserMenu.html
@@ -18,7 +18,7 @@
             </a>
 
             <a class="item ion-trash-a assertive"
-               ng-if="vm.currentUser = 'ADMIN'" ng-click="vm.remove()" translate="status.block.delete">
+               ng-if="vm.currentUser.isAdmin" ng-click="vm.remove()" translate="status.block.delete">
                 Delete
             </a>
         </div>
