--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -79,6 +79,7 @@
         <script src="app/shared/services/localStorage.service.js"></script>
         <script src="app/shared/services/tag.service.js"></script>
         <script src="app/shared/services/block.service.js"></script>
+        <script src="app/shared/services/account.service.js"></script>
 
         <script src="app/shared/state/profile/profile.controller.js"></script>
         <script src="app/shared/state/conversation/conversation.controller.js"></script>
