--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -52,7 +52,7 @@
         </p>
     </div>
     <div class="row">
-        <div class="col-25 button button-clear ion-chatbox tatami-button" ng-click="vm.postReply()"></div>
+        <div class="col-25 button button-clear ion-reply tatami-button" ng-click="vm.postReply()"></div>
         <div class="col-25 button button-clear ion-star tatami-button" ng-click="vm.favorite()" ng-class="{ 'button-energized': vm.status.favorite }"></div>
         <div class="col-25 button button-clear ion-more tatami-button" ng-if="!vm.isCurrentUser" ng-click="popover.show($event)"></div>
         <div class="col-25 button button-clear ion-trash-a tatami-button" ng-if="vm.isCurrentUser" ng-click="vm.remove()"></div>
