--- a/mobile/www/app/shared/status/status.html
+++ b/mobile/www/app/shared/status/status.html
@@ -54,6 +54,7 @@
     <div class="row">
         <div class="col-25 button button-clear ion-reply tatami-button" ng-click="vm.postReply()"></div>
         <div class="col-25 button button-clear ion-star tatami-button" ng-click="vm.favorite()" ng-class="{ 'button-energized': vm.status.favorite }"></div>
+        <div class="col-25 button button-clear ion-share tatami-button" ng-if="!vm.isCurrentUser" ng-click="vm.shareStatus()" ng-class="{ 'button-calm': vm.status.shareByMe }"></div>
         <div class="col-25 button button-clear ion-more tatami-button" ng-if="!vm.isCurrentUser" ng-click="popover.show($event)"></div>
         <div class="col-25 button button-clear ion-trash-a tatami-button" ng-if="vm.isCurrentUser" ng-click="vm.remove()"></div>
     </div>
