--- a/mobile/www/app/shared/user/user.html
+++ b/mobile/www/app/shared/user/user.html
@@ -6,7 +6,7 @@
         <span class="inline subheading">@{{ vm.user.username }}</span>
         <i class="icon ion-chevron-right icon-accessory"></i>
 
-        <ion-option-button ng-if="(!vm.currentUser || vm.currentUser.username === vm.status.username) && !vm.$state.includes('blockedusers')"
+        <ion-option-button ng-if="vm.$state.includes('follow')"
                            class="button-positive"
                            ng-click="vm.followUser(user)">
             {{ (vm.user.friend ? 'user.unfollow' : 'user.follow') | translate }}
