created email to send to deactivated users, created ToastService

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -81,6 +81,7 @@
         <script src="app/shared/services/localStorage.service.js"></script>
         <script src="app/shared/services/tag.service.js"></script>
         <script src="app/shared/services/block.service.js"></script>
+        <script src="app/shared/services/toast.service.js"></script>
         <script src="app/shared/services/report.service.js"></script>
         <script src="app/shared/services/account.service.js"></script>
         <script src="app/shared/services/report.service.js"></script>
