Creating all users state

--- a/mobile/www/index.html
+++ b/mobile/www/index.html
@@ -55,6 +55,8 @@
         <script src="app/components/home/more/blocked_users/blocked.users.controller.js"></script>
         <script src="app/components/home/more/reportedStatus/reportedStatus.js"></script>
         <script src="app/components/home/more/reportedStatus/reportedStatus.controller.js"></script>
+        <script src="app/components/home/more/all_users/all.users.js"></script>
+        <script src="app/components/home/more/all_users/all.users.controller.js"></script>
 
         <script src="app/components/follow/follow.js"></script>
         <script src="app/components/follow/suggested/suggested.js"></script>
