--- a/mobile/www/app/shared/state/profile/userOptionsMenu.html
+++ b/mobile/www/app/shared/state/profile/userOptionsMenu.html
@@ -1,4 +1,4 @@
-<ion-popover-view ng-style="vm.customHeight">
+<ion-popover-view ng-style="vm.customHeight" scroll="false">
     <ion-content>
         <div class="list" ng-click="popover.hide()">
             <a class="item assertive" target="_blank" ng-click="vm.blockUser()">
