--- a/mobile/www/app/shared/state/profile/profile.html
+++ b/mobile/www/app/shared/state/profile/profile.html
@@ -10,7 +10,7 @@
                 style="font-size: 30px;"
                 ng-click="vm.followUser()"></button>
     </ion-nav-buttons>
-    <ion-content>
+    <ion-content class="tatami-header tatami-footer">
         <ion-refresher on-refresh="vm.getNewStatuses()"></ion-refresher>
         <tatami-user-detail user="vm.user"></tatami-user-detail>
         <ion-list>
