fix block user function from user profile page to actually be able to block a user

--- a/mobile/www/app/shared/state/profile/profile.html
+++ b/mobile/www/app/shared/state/profile/profile.html
@@ -1,6 +1,6 @@
 <ion-view view-title="@{{ vm.user.username }}">
     <ion-nav-buttons side="secondary">
-        <button class="button ion-gear-b"
+        <button class="button ion-gear-a"
                 ng-if="!vm.isCurrentUser"
                 style="font-size: 30px;"
                 ng-click="popover.show($event)"></button>
