--- a/src/main/resources/mails/passwordResetEmail.html
+++ b/src/main/resources/mails/passwordResetEmail.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
-    <head>a
+    <head>
         <title th:text="#{email.reset.title}">JHipster password reset</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     </head>
