Added proper background color to all html docs that use ion-list, fixed some wordings in english json (need french to be updated to match)

--- a/mobile/www/app/shared/state/profile/profile.html
+++ b/mobile/www/app/shared/state/profile/profile.html
@@ -10,7 +10,7 @@
                 style="font-size: 30px;"
                 ng-click="vm.followUser()"></button>
     </ion-nav-buttons>
-    <ion-content class="tatami-header tatami-footer">
+    <ion-content class="tatami-header tatami-footer" ng-style="{'background-color':'#f5f5f5'}">
         <ion-refresher on-refresh="vm.getNewStatuses()"></ion-refresher>
         <tatami-user-detail user="vm.user"></tatami-user-detail>
         <ion-list>
