Reverted files cleanup that deleted home state

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -168,6 +168,7 @@
     <script src="scripts/app/admin/user-management/user-management.controller.js"></script>
     <script src="scripts/app/admin/user-management/user-management.js"></script>
     <script src="scripts/app/error/error.js"></script>
+    <script src="scripts/app/main/main.js"></script>
     <script src="bower_components/messageformat/locale/en.js"></script>
     <script src="bower_components/messageformat/locale/fr.js"></script>
     <script src="scripts/components/language/language.service.js"></script>
