--- a/src/main/webapp/scripts/app/home/profile/profileHeader.html
+++ b/src/main/webapp/scripts/app/home/profile/profileHeader.html
@@ -32,10 +32,10 @@
                         <strong ng-if="user.statusCount <= 0 || user.statusCount > 1" translate="home.profile.userStatusesPlural" translate-values="{ username: user.username, amount: user.statusCount }"></strong>
                     </span>
                     <span ng-if="user.follower" class="badge hidden-phone">
-                        {{ 'tatami.home.profile.followsYou' | translate | uppercase }}
+                        {{ 'home.profile.followsYou' | translate | uppercase }}
                     </span>
                     <span ng-if="!user.activated" class="badge hidden-phone progress-bar-danger">
-                        {{ 'tatami.home.profile.deactivatedUser' | translate | uppercase }}
+                        {{ 'home.profile.deactivatedUser' | translate | uppercase }}
                     </span>
                 </span>
 
@@ -49,10 +49,10 @@
                         <strong ng-if="user.friendsCount <= 0 || user.friendsCount > 1" translate="home.profile.userFollowingPlural" translate-values="{ username: user.username, amount: user.friendsCount }"></strong>
                     </span>
                     <span ng-if="user.follower" class="badge hidden-phone">
-                        {{ 'tatami.home.profile.followsYou' | translate | uppercase }}
+                        {{ 'home.profile.followsYou' | translate | uppercase }}
                     </span>
                     <span ng-if="!user.activated" class="badge hidden-phone progress-bar-danger">
-                        {{ 'tatami.home.profile.deactivatedUser' | translate | uppercase }}
+                        {{ 'home.profile.deactivatedUser' | translate | uppercase }}
                     </span>
                 </span>
 
@@ -66,10 +66,10 @@
                         <strong ng-if="user.followersCount <= 0 || user.followersCount > 1" translate="home.profile.userFollowersPlural" translate-values="{ username: user.username, amount: user.followersCount }"></strong>
                     </span>
                     <span ng-if="user.follower" class="badge hidden-phone">
-                        {{ 'tatami.home.profile.followsYou' | translate | uppercase }}
+                        {{ 'home.profile.followsYou' | translate | uppercase }}
                     </span>
                     <span ng-if="!user.activated" class="badge hidden-phone progress-bar-danger">
-                        {{ 'tatami.home.profile.deactivatedUser' | translate | uppercase }}
+                        {{ 'home.profile.deactivatedUser' | translate | uppercase }}
                     </span>
                 </span>
 
