--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -168,7 +168,6 @@
     <script src="scripts/app/admin/user-management/user-management.controller.js"></script>
     <script src="scripts/app/admin/user-management/user-management.js"></script>
     <script src="scripts/app/error/error.js"></script>
-    <script src="scripts/app/main/main.js"></script>
     <script src="bower_components/messageformat/locale/en.js"></script>
     <script src="bower_components/messageformat/locale/fr.js"></script>
     <script src="scripts/components/language/language.service.js"></script>
@@ -227,6 +226,7 @@
     <script src="scripts/shared/services/SearchService.js"></script>
     <script src="scripts/shared/services/GeolocService.js"></script>
     <script src="scripts/shared/services/PostModalService.js"></script>
+    <script src="scripts/shared/services/block.service.js"></script>
     <script src="scripts/shared/filters/PlaceholderFilter.js"></script>
     <script src="scripts/shared/filters/MarkdownFilter.js"></script>
     <script src="scripts/shared/filters/EmoticonFilter.js"></script>
