--- a/src/main/webapp/scripts/app/home/profile/profileHeader.html
+++ b/src/main/webapp/scripts/app/home/profile/profileHeader.html
@@ -74,6 +74,15 @@
                 </span>
 
                 <span ng-if="!user.you">
+                    <button type="button" ng-click="updateBlockUser()" ng-init="hover = false" ng-mouseenter="hover = true"
+                            ng-mouseleave="hover = false" class="btn btn-sm pull-right"
+                            ng-class="{ 'btn-danger': user.blocked && hover, 'btn-info': user.blocked && !hover }">
+                        <span class="glyphicon" ng-class="user.blocked ? 'glyphicon-ok-sign' : 'glyphicon-remove-sign'"></span>
+                            <span ng-if="!user.blocked" class="hidden-phone" translate="home.profile.block"></span>
+                            <span ng-if="user.blocked && !hover" class="hidden-phone" translate="home.profile.blocked"></span>
+                            <span ng-if="user.blocked && hover" class="hidden-phone" translate="home.profile.unblock"></span>
+                    </button>
+
                     <button type="button" ng-click="followUnfollowUser()" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn btn-sm pull-right" ng-class="{ 'btn-danger': user.friend && hover, 'btn-info': user.friend && !hover }">
                         <span class="glyphicon" ng-class="user.friend ? 'glyphicon-minus' : 'glyphicon-plus'"></span>
                             <span ng-if="!user.friend" class="hidden-phone" translate="home.profile.follow"></span>
@@ -81,6 +90,8 @@
                             <span ng-if="user.friend && hover" class="hidden-phone" translate="home.profile.unfollow"></span>
                     </button>
                 </span>
+
+
             </h3>
         </div>
     </section>
