allow users to view another users profile page from the users page

--- a/src/main/webapp/scripts/app/account/users/list/list.html
+++ b/src/main/webapp/scripts/app/account/users/list/list.html
@@ -14,7 +14,7 @@
                 {{ 'account.users.deactivated' | translate }}
             </span>
         </span>
-                <a ui-sref="home.profile.statuses({ username: user.username })">
+                <a ui-sref="profileStatuses({ email: user.username })">
                     <strong>
                         {{ user.firstName + ' ' + user.lastName }}
                     </strong>
