--- a/src/main/webapp/scripts/shared/lists/status/tatamiStatusList.html
+++ b/src/main/webapp/scripts/shared/lists/status/tatamiStatusList.html
@@ -118,7 +118,7 @@
                                             <i class="glyphicon glyphicon-comment"></i>
                                             <span translate="status.reply"></span>
                                         </button>
-                                        <button ng-if="status.username != profile.username && !status.shareByMe && !status.statusPrivate" ng-click="shareStatus(status, $index)" class="btn-link status-action status-action-share button-ios">
+                                        <button ng-if="!status.yours && !status.shareByMe && !status.statusPrivate" ng-click="shareStatus(status, $index)" class="btn-link status-action status-action-share button-ios">
                                             <i class="glyphicon glyphicon-retweet"></i>
                                             <span translate="status.share"></span>
                                         </button>
@@ -130,7 +130,7 @@
                                             <i class="glyphicon glyphicon-bullhorn"></i>
                                             <span translate="status.announce"></span>
                                         </button>
-                                        <button ng-if="status.username == profile.username" ng-click="deleteStatus(status, $index,('status.confirmDelete' | translate))" class="btn-link status-action status-action-delete button-ios">
+                                        <button ng-if="status.yours" ng-click="deleteStatus(status, $index,('status.confirmDelete' | translate))" class="btn-link status-action status-action-delete button-ios">
                                             <i class="glyphicon glyphicon-trash"></i>
                                             <span translate="status.delete"></span>
                                         </button>
