minor changes to UserResource get all users method

--- a/src/main/webapp/scripts/app/admin/user-management/user-management.html
+++ b/src/main/webapp/scripts/app/admin/user-management/user-management.html
@@ -24,7 +24,7 @@
             </tr>
             </thead>
             <tbody>
-            <tr ng-repeat="user in users">
+            <tr ng-repeat="user in users track by user.id">
                 <td><a ui-sref="user-management-detail({login:user.email})">{{user.id}}</a></td>
 
                 <td>{{user.email}}</td>
