Translation path for failed login fixed

--- a/src/main/webapp/scripts/app/login/login.html
+++ b/src/main/webapp/scripts/app/login/login.html
@@ -42,7 +42,7 @@
                 <div class="panel-heading">
                     <h1 class="panel-title text-center" translate="login.title"></h1>
                     <div class="alert alert-danger" ng-show="authenticationError"
-                         translate="login.messages.error.authentication">
+                         translate="login.fail">
                         <strong>Failed to sign in!</strong> Please check your credentials and try again.
                     </div>
                 </div>
