--- a/src/main/webapp/scripts/app/home/profile/profileHeader.html
+++ b/src/main/webapp/scripts/app/home/profile/profileHeader.html
@@ -73,21 +73,22 @@
                     </span>
                 </span>
 
-                <span ng-if="!user.you">
-                    <button type="button" ng-click="updateBlockUser()" ng-init="hover = false" ng-mouseenter="hover = true"
-                            ng-mouseleave="hover = false" class="btn btn-sm pull-right"
-                            ng-class="{ 'btn-danger': user.blocked && hover, 'btn-info': user.blocked && !hover }">
-                        <span class="glyphicon" ng-class="user.blocked ? 'glyphicon-ok-sign' : 'glyphicon-remove-sign'"></span>
-                            <span ng-if="!user.blocked" class="hidden-phone" translate="home.profile.block"></span>
-                            <span ng-if="user.blocked && !hover" class="hidden-phone" translate="home.profile.blocked"></span>
-                            <span ng-if="user.blocked && hover" class="hidden-phone" translate="home.profile.unblock"></span>
-                    </button>
-
-                    <button type="button" ng-click="followUnfollowUser()" ng-init="hover = false" ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn btn-sm pull-right" ng-class="{ 'btn-danger': user.friend && hover, 'btn-info': user.friend && !hover }">
+                <span ng-if="!user.you" class="pull-right" style="line-height: 25px;">
+                    <button type="button" ng-click="followUnfollowUser()" ng-init="hoverFollow = false" ng-mouseenter="hoverFollow = true"
+                            ng-mouseleave="hoverFollow = false" class="btn btn-sm btn-header"
+                            ng-class="{ 'btn-danger': user.friend && hoverFollow, 'btn-info': user.friend && !hoverFollow }">
                         <span class="glyphicon" ng-class="user.friend ? 'glyphicon-minus' : 'glyphicon-plus'"></span>
                             <span ng-if="!user.friend" class="hidden-phone" translate="home.profile.follow"></span>
-                            <span ng-if="user.friend && !hover" class="hidden-phone" translate="home.profile.following"></span>
-                            <span ng-if="user.friend && hover" class="hidden-phone" translate="home.profile.unfollow"></span>
+                            <span ng-if="user.friend && !hoverFollow" class="hidden-phone" translate="home.profile.following"></span>
+                            <span ng-if="user.friend && hoverFollow" class="hidden-phone" translate="home.profile.unfollow"></span>
+                    </button>
+                    <button type="button" ng-click="updateBlockUser()" ng-init="hoverBlock = false" ng-mouseenter="hoverBlock = true"
+                            ng-mouseleave="hoverBlock = false" class="btn btn-sm btn-header"
+                            ng-class="{ 'btn-danger': user.blocked && hoverBlock, 'btn-info': user.blocked && !hoverBlock }">
+                        <span class="glyphicon" ng-class="user.blocked ? 'glyphicon-ok-sign' : 'glyphicon-remove-sign'"></span>
+                            <span ng-if="!user.blocked" class="hidden-phone" translate="home.profile.block"></span>
+                            <span ng-if="user.blocked && !hoverBlock" class="hidden-phone" translate="home.profile.blocked"></span>
+                            <span ng-if="user.blocked && hoverBlock" class="hidden-phone" translate="home.profile.unblock"></span>
                     </button>
                 </span>
 
