--- a/src/main/webapp/scripts/app/home/timeline/group/groupHeader.html
+++ b/src/main/webapp/scripts/app/home/timeline/group/groupHeader.html
@@ -49,15 +49,14 @@
                 </span>
                 <span ng-if="!group.administrator">
                     <button type="button" ng-click="joinLeaveGroup()" ng-init="hover = false"
-                            ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn btn-sm pull-right"
+                            ng-mouseenter="hover = true" ng-mouseleave="hover = false" class="btn btn-sm btn-header pull-right"
                             ng-class="{ 'btn-danger': group.member && hover, 'btn-info': group.member && !hover }">
-                        <span class="glyphicon" ng-class="group.member ? 'glyphicon-minus' : 'glyphicon-plus'">
-                            <span ng-if="!group.member" class="hidden-phone" translate="home.group.join"></span>
-                            <span ng-if="group.member && !hover" class="hidden-phone"
-                                  translate="home.group.joined"></span>
-                            <span ng-if="group.member && hover" class="hidden-phone"
-                                  translate="home.group.leave"></span>
-                        </span>
+                        <span class="glyphicon" ng-class="group.member ? 'glyphicon-minus' : 'glyphicon-plus'"></span>
+                        <span ng-if="!group.member" class="hidden-phone" translate="home.group.join"></span>
+                        <span ng-if="group.member && !hover" class="hidden-phone"
+                              translate="home.group.joined"></span>
+                        <span ng-if="group.member && hover" class="hidden-phone"
+                              translate="home.group.leave"></span>
                     </button>
                 </span>
 
