add dropdown menu on timeline to report, and hide statuses and block users

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -13,6 +13,7 @@
         <link rel="stylesheet" href="bower_components/angular-loading-bar/build/loading-bar.css" />
         <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.css" />
         <link rel="stylesheet" href="bower_components/ngToast/dist/ngToast.css" />
+        <link rel="stylesheet" href="bower_components/angular-material/angular-material.css" />
         <link rel="stylesheet" href="bower_components/angular-hotkeys/build/hotkeys.css" />
         <!-- endbower -->
         <!--link rel="stylesheet" href= "assets/styles/bootstrap.css" />
@@ -88,6 +89,7 @@
         <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/ngToast/dist/ngToast.js"></script>
+        <script src="bower_components/angular-material/angular-material.js"></script>
         <!-- endbower -->
         <!-- endbuild -->
         <script src="assets/js/openlayers/OpenLayers.js"></script>
