Building the war using maven will automatically add version/build to index.html

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -47,7 +47,7 @@
             <div ui-view="content"></div>
 
             <div ng-if="!$state.includes('home')" style="opacity: 0.5; text-align:center;">
-                Version: <pom>version</pom>, Build: <pom>build</pom>
+                Version: ${version}, Build: ${buildNumber}
             </div>
         </div>
 
