--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -89,6 +89,7 @@
         <script src="bower_components/ngInfiniteScroll/build/ng-infinite-scroll.js"></script>
         <script src="bower_components/angular-animate/angular-animate.js"></script>
         <script src="bower_components/ngToast/dist/ngToast.js"></script>
+        <script src="bower_components/ment.io/dist/mentio.js"></script>
         <script src="bower_components/angular-messages/angular-messages.js"></script>
         <script src="bower_components/angular-material/angular-material.js"></script>
         <!-- endbower -->
